--- a/Processing/android software/SBRApp/.classpath
+++ b/Processing/android software/SBRApp/.classpath
@@ -6,4 +6,5 @@
 	<classpathentry kind="lib" path="lib/core.jar"/>
 	<classpathentry kind="lib" path="lib/bluecove-2.1.0.jar"/>
 	<classpathentry kind="lib" path="lib/bluecove-gpl-2.1.0.jar"/>
+	<classpathentry kind="lib" path="lib/jxinput.jar"/>
 </classpath>
